--- a/partials/lists.html
+++ b/partials/lists.html
@@ -6,24 +6,26 @@
 
             </div>
             <div class="span10">
-                <!--Body content-->
+                <!--HEADER CONTENT. LOGO WILL GO HERE WHEN IT'S FINISHED-->
                 <h1>Movies in Theaters</h1>
                 <h3>Powered by Rotten Tomatoes</h3>
 
-                <!--Sidebar content-->
+                <!--SEARCH BAR-->
                 <label>Search:</label> <input ng-model="query">
                 <label>Sort by:</label>
                 <select ng-model="orderProp">
-                    <option value="name">Title</option>
+                    <option value="title">Title</option>
                 </select>
                 <ul>
                     <li ng-repeat="movie in movies.movies | filter:query | orderBy:orderProp">
+
                         <!--ROTTEN TOMATOES API INFO WILL GO IN HERE-->
+                        <a href= "#/movie/{{movie.id}}">
                         <p><img src="{{movie.posters.profile}}" alt="{{movie.title + 'poster'}}"/>
                         <h3>{{movie.title}}</h3>
                         <p>Critic's Score:{{movie.ratings.critics_score}},
                             Audience Score:{{movie.ratings.audience_score}}</p>
-
+                        </a>
                     </li>
                 </ul>
 
