--- a/css/app.css
+++ b/css/app.css
@@ -1,33 +1,79 @@
-/* THIS CUSTOM CSS WILL BE LINKED IN ADDITION TO THE BOOTSTRAP CSS */
+@import url(http://fonts.googleapis.com/css?family=Codystar);
 
-/*CURRENT STYLE HAS BEEN KEPT TO A MINIMUM FOR FUNCTIONALITY PURPOSES*/
+html{
+    background-image: url("../images/shield_of_captain_america-HD.jpg");
+    background-color: black;
+
+}
+
+body{
+    margin-top: 30px;
+    background-color: grey;
+    width: 80%;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-shadow: inset 3px 3px 10px 3px rgba(0,0,0,.5);
+    box-shadow: inset 3px 3px 10px 3px rgba(0,0,0,.5);
+}
+
+header {
+    background-color: black;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    -webkit-box-shadow: inset 3px 3px 10px 3px grey;
+    box-shadow: inset 3px 3px 10px 3px grey;
+    margin-bottom: 20px;
+
+}
+
+.title{
+    text-align: center;
+    font-family: Codystar;
+    color: Red;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.search{
+    text-align: center;
+}
+
 ul{
     list-style: none;
 }
 
-li:first-of-type{
-    margin-top: 20px;
+li {
+    margin-top:20px;
 }
 
-a:hover {
+li img{
+    -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,.35);
+    box-shadow: 3px 3px 10px 3px rgba(0,0,0,.35);
+}
+
+
+
+a {
+    color: white;
+}
+
+a:hover{
+    transform-text: scale(1.2);
     text-decoration: none;
+    color: white;
 }
 
-a:visited{
-    color:#000000;
-    text-decoration: none;
-
+footer{
+    text-align: center;
+    font-size: 20px;
 }
 
-.moviePage a{
-    clear: both;
-    padding: 10px;
+@media only screen and (max-device-width: 480px) {
+    body{
+        width: 100%;
+        border-radius: 0px;
+    }
 }
-
-.moviePage p{
-    color: black;
-    float: none;
-}
-
 
 
