--- a/partials/movie.html
+++ b/partials/movie.html
@@ -1,9 +1,10 @@
    <!--THIS PAGE SHOWS THE INDIVIDUAL MOVIES WHEN THEY ARE CLICKED ON IN THE HOME PAGE-->
 <section class="moviePage">
-    <p><img src="{{singleMovies.posters.detailed}}" alt="{{singleMovies.title + 'poster'}}"/>
-    <h1>{{singleMovies.title}}</h1>
-    </p>
-       <h4>Rated{{singleMovies.mpaa_rating}}</h4>
+    <div class="container">
+        <p><img src="{{singleMovies.posters.detailed}}" alt="{{singleMovies.title + 'poster'}}"/>
+        <h1>{{singleMovies.title}}</h1>
+        </p>
+       <h4>Rated {{singleMovies.mpaa_rating}}</h4>
        <p>What Critics think: {{singleMovies.ratings.critics_rating}}</p>
        <p>Critics Score: {{singleMovies.ratings.critics_score}}</p>
        <p>What Audiences think: {{singleMovies.ratings.audience_rating}}</p>
@@ -11,6 +12,7 @@
        <p>Genres: {{singleMovies.genres}}</p>
        <p>Description: {{singleMovies.synopsis}}</p>
        <a href="index.html">Back to search</a>
+    </div>
     </section>
 
 
