iPhone view is now working correctly. The iPad view needs to be fixed though

--- a/partials/lists.html
+++ b/partials/lists.html
@@ -10,7 +10,7 @@
     <div class="search">
         <label>Search:</label> <input ng-model="query">
         <label>Sort by:</label>
-        <select ng-model="orderProp">
+        <select ng-model="orderProp" class="hidden-sm">
             <option value="title">Title</option>
         </select>
     </div>
