--- a/partials/movie.html
+++ b/partials/movie.html
@@ -1,17 +1,17 @@
    <!--THIS PAGE SHOWS THE INDIVIDUAL MOVIES WHEN THEY ARE CLICKED ON IN THE HOME PAGE-->
 <section class="moviePage">
     <div class="container">
-        <p><img src="{{singleMovies.posters.detailed}}" alt="{{singleMovies.title + 'poster'}}"/>
+        <div><img src="{{singleMovies.posters.detailed}}" alt="{{singleMovies.title + 'poster'}}" autofocus/>
         <h1>{{singleMovies.title}}</h1>
-        </p>
-       <h4>Rated {{singleMovies.mpaa_rating}}</h4>
-       <p>What Critics think: {{singleMovies.ratings.critics_rating}}</p>
-       <p>Critics Score: {{singleMovies.ratings.critics_score}}</p>
-       <p>What Audiences think: {{singleMovies.ratings.audience_rating}}</p>
-       <p>Audiences Score: {{singleMovies.ratings.audience_score}}</p>
-       <p>Genres: {{singleMovies.genres}}</p>
-       <p>Description: {{singleMovies.synopsis}}</p>
-       <a href="index.html">Back to search</a>
+        </div>
+       <p><strong>Rated:</strong> {{singleMovies.mpaa_rating}}</p>
+       <p><strong>What Critics think:</strong> {{singleMovies.ratings.critics_rating}}</p>
+       <p><strong>Critics Score:</strong> {{singleMovies.ratings.critics_score}}</p>
+       <p><strong>What Audiences think:</strong> {{singleMovies.ratings.audience_rating}}</p>
+       <p><strong>Audiences Score:</strong> {{singleMovies.ratings.audience_score}}</p>
+       <p class="synopsis"><strong>Synopsis</strong></p>
+       <p class="description">{{singleMovies.synopsis}}</p>
+        <a class="movies_link" href="index.html"><h5 class="back_button">Back to search</h5></a>
     </div>
     </section>
 
