--- a/css/app.css
+++ b/css/app.css
@@ -40,26 +40,15 @@ header {
 }
 
 form{
-    width:80%;
+    width:10%;
     margin-left:auto;
     margin-right:auto;
 }
 
-ul.list-group{
-    list-style: none;
+.list-group{
+    width: 100%;
     margin-top: 20px;
-    margin-left: 30px;
-    column-count: 3;
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
 }
-
-li {
-    margin-top:20px;
-
-}
-
-
 
 .list-group-item img{
     -webkit-box-shadow: 3px 3px 10px 3px rgba(0,0,0,.35);
@@ -68,17 +57,18 @@ li {
     margin-right: auto;
 }
 
-
 .list-group-item{
-    background-color: rgba(0,0,0,0);
+    background-color: transparent;
+    padding: 0;
+    width: 50%;
+    float: left;
+    margin: 0;
+    margin-top: 20px;
+    text-align: center;
     border: none;
+    height: 250px;
 }
 
-p{
-    font-size: 25px;
-    width: 95%;
-    margin-left: 20px;
-}
 
 a {
     color: white;
@@ -95,6 +85,7 @@ footer{
     font-size: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
+    clear: both;
 }
 
 .movies_link{
@@ -136,26 +127,34 @@ footer{
 
 /*iPhone Media Query*/
 @media only screen
-and (min-device-width: 320px)
+and (max-device-width: 320px)
 and (max-device-width: 480px) {
-    body{
+    body {
+        margin: 0;
+        margin-left: auto;
+        margin-right: auto;
         width: 100%;
-        border-radius: 0px;
-
-    }
-    header{
-        width: 100%;
-        border-radius: 0px;
-    }
-    ul.list-group{
-        column-count:1;
-        -moz-column-count:1; /* Firefox */
-        -webkit-column-count:1; /* Safari and Chrome */
-    }
-
-
-
+        max-width: 480px;
+        min-width: 320px;
+        padding: 0;
 }
+    header{
+        margin:0;
+        padding:0;
+        width: 100%;
+        min-width: 320px;
+        max-width: 480px;
+}
+    .list-group-item{
+    width: 100%;
+}
+    .list-group-item h3{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+}
+}
+
 
 /* iPads (landscape) ----------- */
 @media only screen
@@ -163,57 +162,9 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : landscape) {
     /* Styles */
-    html{
-        width: 400px;
-    }
-    body{
-        width: 400px;
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 0;
-        font-size: 40px;
-        border-radius: 0px;
-    }
-    header{
-        width: 400px;
-        border-radius: 0px;;
-    }
     .title{
         font-size: 50px;
         text-align: center;
-    }
-    ul.list-group{
-        column-count: 1;
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
-        width: 80%;
-        margin-left: auto;
-        margin-right:auto;
-    }
-    h1 {
-        font-size: 50px;
-        width: 730px;
-
-    }
-
-    p{
-        width: 750px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .synopsis{
-    }
-
-    .description{
-        font-size: 30px;
-        width: 50%;
-        margin-left: 70px;
-    }
-
-    .back_button{
-      border-radius: 15px;
-
     }
 
 }
@@ -224,15 +175,10 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : portrait) {
     /* Styles */
+
     body{
-        width: 50%;
-        font-size: 30px;
-        margin-top: 0;
-        margin-left: 0;
-        border-radius: 0;
-    }
-    header{
-        border-radius: 0;
+        width: 100%;
+        margin: 0;
     }
 
     .title h1{
@@ -243,15 +189,64 @@ and (orientation : portrait) {
         margin-left: auto;
         margin-right: auto;
     }
-    .search select{
-        margin-top: 10px;
+
+    .searchbar{
+        text-align: center;
+        width: 100%;
+        height: 75px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 30px;
+
     }
-    ul.list-group{
-        column-count:1;
-        -moz-column-count:1; /* Firefox */
-        -webkit-column-count:1; /* Safari and Chrome */
+    .searchbar input{
+        width: 70%;
+        height: 75px;
     }
 
+    form{
+        font-size: 30px;
+        width: 60%;
+    }
+
+    input{
+        width: 30px;
+        height: 30px;
+    }
+
+    .radio{
+        text-align: center;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .radio input{
+        width: 10%;
+    }
+
+    label{
+        font-size: 30px;
+        width: 30%;
+    }
+
+
+    .dropdown{
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        height: 55px;
+        font-size: 30px;
+    }
+
+    .list-group-item{
+        width: 100%;
+    }
+
+    .list-group-item h3{
+        font-size: 40px;
+    }
 
 }
 
